k8s/base/05-api-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-dev-api-gateway
  namespace: petclinic-dev
  labels:
    app: petclinic-dev-api-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-dev-api-gateway
  template:
    metadata:
      labels:
        app: petclinic-dev-api-gateway
    spec:
      containers:
        - name: api-gateway
          image: 527582557964.dkr.ecr.us-east-1.amazonaws.com/petclinic-dev-api-gateway:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "384Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-dev-api-gateway
  namespace: petclinic-dev
spec:
  selector:
    app: petclinic-dev-api-gateway
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
