k8s/base/12-zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petclinic-dev-zipkin
  namespace: petclinic-dev
  labels:
    app: petclinic-dev-zipkin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petclinic-dev-zipkin
  template:
    metadata:
      labels:
        app: petclinic-dev-zipkin
    spec:
      containers:
        - name: zipkin
          image: openzipkin/zipkin
          ports:
            - containerPort: 9411
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
          readinessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 9411
            initialDelaySeconds: 60
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: petclinic-dev-zipkin
  namespace: petclinic-dev
spec:
  selector:
    app: petclinic-dev-zipkin
  ports:
    - protocol: TCP
      port: 9411
      targetPort: 9411
